--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -24,6 +24,11 @@
   <java-symbol type="string" name="config_bodyFontFamily" />
   <java-symbol type="string" name="config_bodyFontFamilyMedium" />
 
+  <!-- Package Manager -->
+  <java-symbol type="array" name="config_deviceDisabledComponents" />
+  <java-symbol type="array" name="config_globallyDisabledComponents" />
+  <java-symbol type="array" name="config_forceEnabledComponents" />
+
   <!-- Max visible notification icons -->
   <java-symbol type="integer" name="config_maxVisibleNotificationIcons" />
   <java-symbol type="integer" name="config_maxVisibleNotificationIconsWhenDark" />
