PackageManager: allow build-time disabling of components
Allow components to be specified as disabled at build time
(applied on boot).

This allows stock OTA components to be marked as disabled in
CM builds.

Change-Id: I6e4499cc40a779792a5ea97a10137399dad7d69f

SystemUpdateService: enable service but lock its receivers [1/2]

Added a check for ensure that disabled components are not
re-enabled at runtime

Added code for forcing enable of previously disabled components

aosip: pkgSetting>AndroidPackageUtils

Change-Id: Icfcfa26ccb85028d32edbb5cdb3dd7cdae85b720
Signed-off-by: Alex Naidis <alex.naidis@linux.com>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -32,4 +32,7 @@
   <java-symbol type="integer" name="config_maxVisibleNotificationIcons" />
   <java-symbol type="integer" name="config_maxVisibleNotificationIconsWhenDark" />
 
+  <!-- Package Manager -->
+  <java-symbol type="array" name="config_disabledComponents" />
+  <java-symbol type="array" name="config_forceEnabledComponents" />
 </resources>
