base: bring back screenrecord
- adapt for P

Squashed commit of the following:

Author: Alexander Martinz <eviscerationls@gmail.com>
Date:   Tue Jan 19 21:23:57 2016 +0100

    Save screenrecord in "Screenrecords" directory

    Change-Id: Idf9b024bbbf1816aa91e5e455525750a761ddb73

Author: maxwen <max.weninger@gmail.com>
Date:   Sun Dec 28 21:31:46 2014 +0100

    base: screenrecord: use different notification image

    Change-Id: I252144a4f5c3bdaa84974b996348885ba8dee942

Author: XpLoDWilD <xplod@ouverta.fr>
Date:   Sun Jul 13 21:43:28 2014 +0200

    Screenrecord: Fix SystemUI loop-crash

    Change-Id: I25045820465d21b7d1f0e933e5e4f3324cb044b6

Author: maxwen <max.weninger@gmail.com>
Date:   Tue Apr 29 23:28:06 2014 +0200

    base: screenrecord: update notification

    Update show/hide pointer button for actual state

    Change-Id: I02090f05b06896248483f3f9ff2eb22924a22476

Author: maxwen <max.weninger@gmail.com>
Date:   Tue Dec 23 01:04:35 2014 +0100

    Screenrecord: correct multi-user acces for settings

    Change-Id: I0bee907d190b2dc0df1c12d136f31ed379a59866

Author: xplodwild <me@xplod.fr>
Date:   Wed Nov 13 08:16:57 2013 +0100

    Screenrecord: Create the Screenshots directory if it doesn't exist

    Change-Id: I2b0458eed024dbda97e9e1ea3426c12d29add781

Author: xplodwild <me@xplod.fr>
Date:   Tue Nov 5 20:30:09 2013 +0100

    base: Add a key combo to start/stop video recording

    Press volume up and power to start recording a video of your screen.
    Press this key combo again to stop it.

    Change-Id: Id0b13ba1092a1d6e0bf7bff5f14d89764cdf370c

Change-Id: Ida1ee4a5c8d334c72d549752d02bd7848932dc7c

base: bring back screen record shortcut

Change-Id: Iad561a2dc7f6c68b49e40537c4d5152d93dcdf09

SystemUI: screenrecord: make sure to always delete tmp file

tell media scanner that the tmp file got deleted

Change-Id: I2974969fa25a01c9422f13316d188b65db591156
Signed-off-by: Josh Fox(XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -37,4 +37,8 @@
     <java-symbol type="id" name="aerr_copy" />
     <java-symbol type="string" name="url_copy_success" />
     <java-symbol type="string" name="url_copy_failed" />
+
+    <!-- Screenrecord -->
+    <java-symbol type="bool" name="config_enableScreenrecordChord" />
+
 </resources>
