base: Disable Emergency affordance feature in Power Menu
Change-Id: I790ed30ac0433e7e3ee000ffb7694104e0c4e2ad
Signed-off-by: Josh Fox(XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/aosip_config.xml
+++ b/core/res/res/values/aosip_config.xml
@@ -49,4 +49,7 @@
            1. Lenient threshold
     -->
     <integer name="config_LTE_RSRP_threshold_type">0</integer>
+
+    <!-- Whether to show emergency button in power menu -->
+    <bool name="config_showEmergencyButtonInPowerMenu">false</bool>
 </resources>
