--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -36,4 +36,8 @@
   <java-symbol type="id" name="aerr_copy" />
   <java-symbol type="string" name="url_copy_success" />
   <java-symbol type="string" name="url_copy_failed" />
+
+  <!-- Power menu -->
+  <java-symbol type="array" name="config_rebootActionsList" />
+
 </resources>
