base: Global Actions with Advanced Reboot [1/2]
With fixes from:

Do not show reboot dialog in lock screen
-Adin Kwok <adin.kwok@carbonrom.org>

Dismiss dialog on screen off
-Adin Kwok <adin.kwok@carbonrom.org>

Vectorized the power menu sound panel selector
-David Wilson <daveyannihilation@hotmail.com

Fix silent mode icons in new power menu
Fix airplane mode in new power menu
-camcory <camcory1@gmail.com>

Pimp out power menu
-Alex Cruz <mazdarider23@gmail.com>

Powermenu Torch option
-LorDClockaN <davor@losinj.com>

Add Screen Record to the Power Menu
-eyosen <abittin@gmail.com>

Power menu customizations [1/2]
-Dave Kessler <activethrasher00@gmail.com>

[anayw2001 edits: bring up to 11]

Change-Id: I6978be623b0ec7ca9e702fc311449c36b504b1a6
Signed-off-by: Adin Kwok <adin.kwok@carbonrom.org>
(cherry picked from commit 7a858810dc2c2984457a17c4d2385c3b8c0123ab)

--- a/packages/SystemUI/res/values/aosip_strings.xml
+++ b/packages/SystemUI/res/values/aosip_strings.xml
@@ -17,4 +17,12 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- AOD QS tile -->
     <string name="quick_settings_aod_label">AOD</string>
+
+    <!-- Power Menu -->
+    <string name="global_action_reboot">Restart</string>
+    <string name="global_action_reboot_more">Restart\u2026</string>
+    <string name="global_action_reboot_sub">System</string>
+    <string name="global_action_reboot_recovery">Recovery</string>
+    <string name="global_action_reboot_bootloader">Bootloader</string>
+    <string name="global_action_settings">Settings</string>
 </resources>
