--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2775,6 +2775,7 @@
         <item>lockdown</item>
         <item>power</item>
         <item>restart</item>
+        <item>recovery</item>
         <item>logout</item>
         <item>bugreport</item>
     </string-array>
