Global Actions with Advanced Reboot [1/2]
Vectorized the power menu sound panel selector
 -David Wilson <daveyannihilation@hotmail.com>

Pimp out power menu
-Cruz <du.alexcruz@gmail.com>

Powermenu Torch option
-LorDClockaN <davor@losinj.com>

Power menu customizations [1/2]
-Dave Kessler <activethrasher00@gmail.com>

Updated for android 11. Added setting for number
of actions to show before adding overflow menu
- Jason Edson <jaysonedson@gmail.com>

Co-authored-by: Dave Kessler <activethrasher00@gmail.com>
Co-authored-by: David Wilson <daveyannihilation@hotmail.com>
Co-authored-by: LorDClockaN <davor@losinj.com>
Co-authored-by: Cruz <du.alexcruz@gmail.com>
Co-authored-by: Jason Edson <jaysonedson@gmail.com>
Change-Id: I4cf5325b07a00cd2960909f161b470d61c53928d

--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -39,4 +39,8 @@
 
   <!-- In-display Fingerprint -->
   <java-symbol type="bool" name="config_needCustomFODView" />
+
+  <!-- Power menu -->
+  <java-symbol type="array" name="config_rebootActionsList" />
+
 </resources>
