--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -39,4 +39,7 @@
 
   <!-- In-display Fingerprint -->
   <java-symbol type="bool" name="config_needCustomFODView" />
+
+  <!-- Power menu -->
+  <java-symbol type="array" name="config_rebootActionsList" />
 </resources>
