PowerMenu toggleable recovery/bootloader action
also fix normal reboot strings thanks to @xyyx

Change-Id: If0b2ee4bc7b5e5da3f3a6dbfa0fd7e563706b903
Signed-off-by: Josh Fox(XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -42,4 +42,12 @@
     <java-symbol type="string" name="url_copy_success" />
     <java-symbol type="string" name="url_copy_failed" />
 
+    <!-- Power Menu -->
+    <java-symbol type="string" name="reboot_to_recovery_title" />
+    <java-symbol type="string" name="reboot_to_recovery_message" />
+    <java-symbol type="string" name="reboot_to_bootloader_title" />
+    <java-symbol type="string" name="reboot_to_bootloader_message" />
+    <java-symbol type="string" name="reboot_title" />
+    <java-symbol type="string" name="reboot_message" />
+
 </resources>
