--- a/packages/SystemUI/res/values/aosip_strings.xml
+++ b/packages/SystemUI/res/values/aosip_strings.xml
@@ -76,5 +76,6 @@
     <string name="qs_menu_item_columns_eight">8</string>
     <string name="qs_menu_item_columns_nine">9</string>
     <string name="qs_menu_item_reset">Reset</string>
+    <string name="qs_menu_item_titles">Show labels</string>
 
 </resources>
