--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -18,4 +18,8 @@
   <!-- Custom default wallpaper -->
   <java-symbol type="drawable" name="custom_default_wallpaper" />
 
+  <!-- Device keyhandlers -->
+  <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
+  <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
+
 </resources>
