Add soft reboot option
Adds a "Soft reboot" option which restarts zygote, as requested in JIRA
CYAN-3998

*DU Edits*
- Adapted to new power menu
- Renamed to Hot Reboot, sounds better
- Create a custom globalActionsList to avoid conflicts

Change-Id: Ia6e5ed9b053e1c5ebd1fc55e5692858b97f8e0fc
Signed-off-by: Josh Fox(XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/aosip_config.xml
+++ b/core/res/res/values/aosip_config.xml
@@ -52,4 +52,12 @@
 
     <!-- Whether to show emergency button in power menu -->
     <bool name="config_showEmergencyButtonInPowerMenu">false</bool>
+
+    <!-- Power menu -->
+    <string-array translatable="false" name="config_custom_globalActionsList">
+        <item>power</item>
+        <item>restart</item>
+        <item>advanced</item>
+    </string-array>
+
 </resources>
