--- a/core/res/res/values/aosip_strings.xml
+++ b/core/res/res/values/aosip_strings.xml
@@ -20,6 +20,7 @@
     <string name="url_copy_success">URL copied successfully</string>
     <string name="url_copy_failed">An error occured while uploading the log to dogbin</string>
 
+    <!-- Power menu -->
     <string name="reboot_to_recovery_title" translatable="false">Recovery</string>
     <string name="reboot_to_recovery_message" translatable="false">Rebooting to recovery</string>
     <string name="reboot_to_bootloader_title" translatable="false">Bootloader</string>
