--- a/packages/SystemUI/res/values/aosip_strings.xml
+++ b/packages/SystemUI/res/values/aosip_strings.xml
@@ -105,5 +105,5 @@
     <string name="global_action_restart_recovery">Recovery</string>
     <string name="global_action_restart_bootloader">Bootloader</string>
     <string name="global_action_restart_ui">SystemUI</string>
-
+    <string name="global_action_restart_hot">Hot</string>
 </resources>
