Add screenshot option
*DU Edits*
- Adapted to new power menu

aosip edit: use pies screenshot intent

Change-Id: I77bdf40bf6f2193dba978c5ff4f8be9ed5ae3a00
Signed-off-by: Josh Fox(XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/aosip_config.xml
+++ b/core/res/res/values/aosip_config.xml
@@ -58,6 +58,7 @@
         <item>power</item>
         <item>restart</item>
         <item>advanced</item>
+        <item>screenshot</item>
     </string-array>
 
 </resources>
