--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -16,4 +16,6 @@
 <resources>
     <!-- Rotation sensor -->
     <java-symbol type="bool" name="config_useSystemClockforRotationSensor" />
+
+  <java-symbol type="array" name="config_vendorPlatformSignatures" />
 </resources>
