Add button to AppErrorDialog to upload crash information to dogbin
Change-Id: I221d8d6d3a04db671a3d2d0f879e1a8e00faa144
Signed-off-by: Josh Fox(XlxFoXxlX) <joshfox87@gmail.com>
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>

--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -14,7 +14,6 @@
    limitations under the License.
 -->
 <resources>
-
   <!-- Custom default wallpaper -->
   <java-symbol type="drawable" name="custom_default_wallpaper" />
 
@@ -40,4 +39,8 @@
   <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
   <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
 
+  <!-- App error dialog -->
+  <java-symbol type="id" name="aerr_copy" />
+  <java-symbol type="string" name="url_copy_success" />
+  <java-symbol type="string" name="url_copy_failed" />
 </resources>
