--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -14,7 +14,6 @@
    limitations under the License.
 -->
 <resources>
-
   <!-- Custom default wallpaper -->
   <java-symbol type="drawable" name="custom_default_wallpaper" />
 
@@ -22,4 +21,8 @@
   <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
   <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
 
+  <!-- App error dialog -->
+  <java-symbol type="id" name="aerr_copy" />
+  <java-symbol type="string" name="url_copy_success" />
+  <java-symbol type="string" name="url_copy_failed" />
 </resources>
