SystemUI: Allow overlaying max notification icons
* I believe there are devices in this world that can fit
  more than 4 notification icons.

[ anirudhgupta109 | AOSiP ]
Move config to internal from SystemUI to allow overlaying in NoCutoutOverlay

fox:
fix for r18

Change-Id: I8f01b4e0385b35f4ed93aab2619839e5b40ee0c7
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/aosip_config.xml
+++ b/core/res/res/values/aosip_config.xml
@@ -21,4 +21,7 @@
     <!-- Name of a font family to use as regular font. For theming purpose. -->
     <string name="config_regularFontFamily" translatable="false">sans-serif-regular</string>
 
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">4</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">5</integer>
 </resources>
