Add our Utils helper class
From time to time we need to filter out certain features because not every
device is created equal. This makes it easy to call from one place instead
of adding the same code time and time again.

As of right now this class includes checks for

- Fingerprint support
- Fingerprint support & enrollment
- NFC
- WiFi
- Camera
- Bluetooth
- Mobile connection
- Alterative ambient display (OnePlus devices)
- A/B device support

Change-Id: Ia27dc8d49a78c843f2a185f3aef195f17cc090aa
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -24,6 +24,9 @@
   <java-symbol type="string" name="config_bodyFontFamily" />
   <java-symbol type="string" name="config_bodyFontFamilyMedium" />
 
+  <!-- Whether device supports an alt. ambient display -->
+  <java-symbol type="bool" name="config_alt_ambient_display"/>
+
   <!-- App error dialog -->
   <java-symbol type="id" name="aerr_copy" />
   <java-symbol type="string" name="url_copy_success" />
