--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -40,4 +40,6 @@
   <!-- Power menu -->
   <java-symbol type="array" name="config_rebootActionsList" />
 
+  <!-- In-display Fingerprint -->
+  <java-symbol type="bool" name="config_needCustomFODView" />
 </resources>
