Squashed import of in-display fingerprint sensors related changes
Author: Peter Cai <peter@typeblog.net>
Date:   Fri Apr 5 16:44:18 2019 +0200

    Initial support for in-display fingerprint sensors

    * Initially based upon phh's Mi9 implementation,
      however a lot of changes have been made since.
    * All device specific stuff has been moved to
      IFingerprintInscreen HIDL interface and most
      of code has been improved and refactored.

    Change-Id: I52beaf6492b9daa012b5d42b858d552d1e378a2c

Author: Peter Cai <peter@typeblog.net>
Date:   Sat Sep 7 11:01:39 2019 +0800

    FODCircleView: defer removal to next re-layout

    * Originally, when hide() is called, it removes the dim layer and then
      removes the view immediately, then calls the hide event in HAL. This
      causes severe flickering because the HAL is expected to restore the
      brightness immediately, but the dim layer will not be removed until
      the next repaint cycle.

    * Since it is not easy to listen for a redraw after the view itself has
      been removed, we can defer removal after the next time onLayout() is
      called. When tested on my OnePlus 7 Pro, this reduces flickering on
      successful fp authentication drastically.

    * There are some cases where show() is called so quickly after hide()
      that the view hasn't been actually removed due to this change (which
      is actually another cause of flickering). This is handled by checking
      the removal flag in show() and removing it immediately if the view is
      yet to be removed, and also by moving calls to HAL show / hide events
      to the actual attached / detached event handlers.

    * For consistency in semantics, also move calls related to the dim
      layer that were originally in onDraw for similar reasons to the
      onLayout function.

    Change-Id: I9b0cfe5c4d572a64b918ce7d3c130a659fd25a30

Author: Demon000 <demonsingur@gmail.com>
Date:   Sun Dec 29 12:51:34 2019 +0100

    FODCircle

--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -46,4 +46,7 @@
   <java-symbol name="reboot_system_message" type="string" />
   <java-symbol type="array" name="config_rebootActionsList" />
   <java-symbol type="array" name="values_globalActionsList" />
+
+  <!-- In-display Fingerprint -->
+  <java-symbol type="bool" name="config_needCustomFODView" />
 </resources>
