--- a/core/res/res/values/aosip_config.xml
+++ b/core/res/res/values/aosip_config.xml
@@ -33,4 +33,6 @@
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
     </string-array>
 
+     <!-- Shows the required view for in-display fingerprint -->
+    <bool name="config_supportsInDisplayFingerprint">false</bool>
 </resources>
