Add switch for vpn, data saver and roaming icons
spezi77: Moved all switches to status_bar_prefs
Change-Id: Idd1bb7bfd69d915c4452157fef6720b99a60271b
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/packages/SystemUI/res/values/aosip_strings.xml
+++ b/packages/SystemUI/res/values/aosip_strings.xml
@@ -17,4 +17,10 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- AOD QS tile -->
     <string name="quick_settings_aod_label">AOD</string>
+
+    <!-- Tuner items -->
+    <string name="status_bar_data_saver">Data saver</string>
+    <string name="status_bar_vpn">VPN</string>
+    <string name="status_bar_roaming">Roaming</string>
+
 </resources>
