--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -42,4 +42,7 @@
 
    <!-- FOD icon dimming -->
    <java-symbol type="bool" name="config_targetUsesInKernelDimming" />
+
+   <!-- Device has OnePlus haptic motor -->
+   <java-symbol type="bool" name="config_hasOnePlusHapticMotor" />
 </resources>
