--- a/packages/SettingsLib/res/values/aosip_strings.xml
+++ b/packages/SettingsLib/res/values/aosip_strings.xml
@@ -25,4 +25,7 @@
     <!-- Deep sleep info -->
     <string name="status_deep_sleep">(Deep sleep: %1$d%2$s)</string>
 
+    <!-- Device has OnePlus haptic motor -->
+    <java-symbol type="bool" name="config_hasOnePlusHapticMotor" />
+
 </resources>
