--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -49,4 +49,7 @@
 
   <!-- In-display Fingerprint -->
   <java-symbol type="bool" name="config_needCustomFODView" />
+
+   <!-- FOD icon dimming -->
+   <java-symbol type="bool" name="config_targetUsesInKernelDimming" />
 </resources>
