FODCircleView: Dim FOD icon
Change-Id: Ic8bb03ae2af68c877f41510068f3d9e307193384
Signed-off-by: Omkar Chandorkar <gotenksIN@aosip.dev>

--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -42,4 +42,7 @@
 
   <!-- In-display Fingerprint -->
   <java-symbol type="bool" name="config_needCustomFODView" />
+
+   <!-- FOD icon dimming -->
+   <java-symbol type="bool" name="config_targetUsesInKernelDimming" />
 </resources>
