--- a/core/res/res/values/aosip_symbols.xml
+++ b/core/res/res/values/aosip_symbols.xml
@@ -39,4 +39,6 @@
 
   <!-- In-display Fingerprint -->
   <java-symbol type="bool" name="config_needCustomFODView" />
+
+  <java-symbol type="bool" name="config_has_Soli" />
 </resources>
